--- a/index-wcopy.html
+++ b/index-wcopy.html
@@ -6,9 +6,9 @@
     <li><a href="home.css">home.css</a></li>
     </ul>
    </li>
-   <li>favicon2.png
+   <li>favicon.ico
     <ul>
-    <li><a href="favicon2.png">favicon2.png</a></li>
+    <li><a href="favicon.ico">favicon.ico</a></li>
     </ul>
    </li>
    <li>team.html
@@ -216,7 +216,7 @@
    </li>
    <li>index.html
     <ul>
-    <li><a href="index-1.html">Home | ARES Robotics</a></li>
+    <li><a href="index.html">Home | ARES Robotics</a></li>
     </ul>
    </li>
    <li>menubuttonwhite.png
