--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans:300,400,600,700|Raleway:400,500,600,700,800,900|Bitter:400,700" rel="stylesheet">
-      <link rel="shortcut icon" href="favicon2.png">
+      <link rel="shortcut icon" href="favicon.ico">
 <script src='https://www.google.com/recaptcha/api.js' async="" defer=""></script>
   </head>
 <body style="background-color: #f6f9fa;">
@@ -70,7 +70,7 @@
     <div class="wrapper" style="display: none;">
       <div id="content">
         <div id='typewriter'>
-          <h1>Design to Discover.</h1>
+          <h1>ARES ROBOTICS.</h1>
         </div>
         <div style="display: none;">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/wK3X3An_sgE" frameborder="0" allowfullscreen="" id='cdr-home'></iframe>
@@ -95,10 +95,10 @@
         <ul>
           <li style="width: 8%;"><a>Home</a></li>
           <li style="width: 16%;"><a href="team.html">About Us</a></li>
-          <li style="width: 10%;"><a id="urclink">URC &#9660</a>
+          <li style="width: 25%;"><a id="urclink">Our Journey &#9660</a>
             <div class="hoverbox" style="margin-left: -20px;" id="hovertwo" style="background-color: #ccc; width: 80px;">
-              <a href="urc.html" class="hoverlink">About URC</a>
-              <a href="urc18.html" class="hoverlink">URC 2018</a> </div>
+              <a href="urc.html" class="hoverlink">About URC</a>               <a href="urc18.html" class="hoverlink">URC 2018</a>               <a href="urc19.html" class="hoverlink">URC 2019 (ATOM)</a>
+            </div>
 
           </li>
 
@@ -185,7 +185,7 @@
           </div>
           <div>
               <div class="subimg">
-                  <img src="computer.jpg">
+                  <img src="computer.png">
               </div>
               <div class="subtext">
                   <h2>Software and AI</h2>
@@ -231,35 +231,43 @@
 
       </div>
     </div>
-    <div id='inthenewswrapper'>
+    <div id='inthenewswrapper' style="padding-bottom: 5%;">
       <div>
-        <h3><a href="news.html" style="color: #fff; text-decoration: underline;">We have been featured</a> in leading newspapers, technical blogs and international magazines from time to time. Our achievements have been highlighted by all forms of media.</h3>
-        <div>
+          <h3>
+              Before you go, we have a favour to ask.
+          </h3>
+        <h3><a href="http://bit.ly/contibuteToARES" style="color: #fff; text-decoration: underline;">Contribute today to our fundraiser, and help a passionate student organisation achieve their dreams in proudly representing India and NSUT at major prestigious competitions worldwide </a>.</h3>
+            <h4 style="text-align:center; width:70%; display:block; margin-left: auto; margin-right:auto;">
+                Building a rover takes time, perseverance and most importantly money. We need to buy expensive hardware, fabricate sophisticated pieces of the body and pay for transportation. All of this isn't something that a group of undergraduate students can afford themselves.
+                We request you to kindly give a few minutes of your time and support us in any way possible. You may decide to
+            </h4>
+
+          <div>
 
 
-          <div id='inthenews'>
+          <!--<div id='inthenews'>-->
 
-            <div>
-              <img src='tabloid\timesofindia.jpeg'>
+            <!--<div>-->
+              <!--<img src='tabloid\timesofindia.jpeg'>-->
 
-              <h4>MRM wins Indian Rover Challenge 2018 | Times Of India</h4>
-              <a href='https://timesofindia.indiatimes.com/city/mangaluru/mars-rover-manipal-secures-first-place-in-indian-rover-challenge-2018/articleshow/62495964.cms' alt='Times Of India'>Read More</a>
-            </div>
+              <!--<h4>MRM wins Indian Rover Challenge 2018 | Times Of India</h4>-->
+              <!--<a href='https://timesofindia.indiatimes.com/city/mangaluru/mars-rover-manipal-secures-first-place-in-indian-rover-challenge-2018/articleshow/62495964.cms' alt='Times Of India'>Read More</a>-->
+            <!--</div>-->
 
 
-            <div>
-              <img src='tabloid\hindu.jpeg'>
+            <!--<div>-->
+              <!--<img src='tabloid\hindu.jpeg'>-->
 
-              <h4>Rover attracts many at exhibition | The Hindu</h4>
-              <a href='http://www.thehindu.com/todays-paper/tp-national/tp-karnataka/rover-attracts-many-at-exhibition/article21246677.ece' alt='The Hindu News'>Read More</a>
-            </div>
+              <!--<h4>Rover attracts many at exhibition | The Hindu</h4>-->
+              <!--<a href='http://www.thehindu.com/todays-paper/tp-national/tp-karnataka/rover-attracts-many-at-exhibition/article21246677.ece' alt='The Hindu News'>Read More</a>-->
+            <!--</div>-->
 
-            <div>
-              <img src='tabloid\bmirror2.jpeg'>
+            <!--<div>-->
+              <!--<img src='tabloid\bmirror2.jpeg'>-->
 
-              <h4>ARES Robotics to build two new rovers | Gadgets Now</h4>
-              <a href='https://www.gadgetsnow.com/tech-news/ranked-8th-in-world-mars-rover-manipal-to-build-two-new-rovers/articleshow/60994044.cms' alt='gadgetsnow'>Read More</a>
-            </div>
+              <!--<h4>ARES Robotics to build two new rovers | Gadgets Now</h4>-->
+              <!--<a href='https://www.gadgetsnow.com/tech-news/ranked-8th-in-world-mars-rover-manipal-to-build-two-new-rovers/articleshow/60994044.cms' alt='gadgetsnow'>Read More</a>-->
+            <!--</div>-->
 
 
 <!--            <div>
@@ -289,7 +297,7 @@
               <a href='http://bangaloremirror.indiatimes.com/news/state/eyes-on-mars-students-to-fly-to-us/articleshow/57798122.cms' alt='Bangalore Mirror'>Read More</a>
             </div>
             -->
-          </div>
+          <!--</div>-->
 
         </div>
       </div>
