--- a/urc16.html
+++ b/urc16.html
@@ -9,13 +9,13 @@
   <meta name="description" content="See ARES Robotics's record in URC 2016.">
   <link rel="stylesheet" type="text/css" href="home.css">
      <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans:300,400,600,700|Raleway:400,500,600,700,800,900|Bitter" rel="stylesheet">
-       <link rel="shortcut icon" href="favicon2.png">
+       <link rel="shortcut icon" href="favicon.ico">
 
 
 <body style='background: -webkit-linear-gradient(#456C86,#003559)'>
 <div id="menu" class="menu">
       <h3>ARES Robotics</h3>
-      <a href="index-1.html">Home</a>
+      <a href="index.html">Home</a>
 
       <a href="team.html">About Us</a>
       <a href="urc.html">URC</a>
@@ -72,12 +72,11 @@
     <nav class="navbar" id="navb"><a class="navbar-left"><img src="logo.png"></a>
       <div id="links">
         <ul>
-          <li style="width: 8%;"><a href='index-1.html'>Home</a></li>
+          <li style="width: 8%;"><a href='index.html'>Home</a></li>
           <li style="width: 16%;"><a href="team.html">About Us</a></li>
-          <li style="width: 10%;"><a id="urclink">URC &#9660</a>
+          <li style="width: 25%;"><a id="urclink">Our Journey &#9660</a>
             <div class="hoverbox" style="margin-left: -20px;" id="hovertwo" style="background-color: #ccc; width: 80px;">
-              <a href="urc.html" class="hoverlink">About URC</a>
-              <a href="urc18.html" class="hoverlink">URC 2018</a> </div>
+              <a href="urc.html" class="hoverlink">About URC</a>               <a href="urc18.html" class="hoverlink">URC 2018</a>               <a href="urc19.html" class="hoverlink">URC 2019 (ATOM)</a> </div>
               <a href="urc17.html" class="hoverlink">URC 2017</a>
               <a class="hoverlink">URC 2016</a></div>
           </li>
@@ -272,7 +271,7 @@
 
             </div>
             <div class="quicklinks">
-              <h5><a href="index-1.html">IRC</a></h5>
+              <h5><a href="index.html">IRC</a></h5>
               <h5><a href="gallery.html">Gallery</a></h5>
               <h5><a href="sponsors.html">Our Sponsors</a></h5>
               <h5><a href="whysponsorus.html">Sponsor Us</a></h5>
