--- a/urc18.html
+++ b/urc18.html
@@ -8,7 +8,7 @@
   <meta name="description" content="See ARES Robotics's record in URC 2017.">
   <link rel="stylesheet" type="text/css" href="home.css">
       <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans:300,400,600,700|Raleway:400,500,600,700,800,900|Bitter" rel="stylesheet">
-        <link rel="shortcut icon" href="favicon2.png">
+        <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <!-- <body style='background:-webkit-linear-gradient(#456C86,#003559)'> -->
@@ -16,7 +16,7 @@
 
   <div id="menu" class="menu">
       <h3>ARES Robotics</h3>
-      <a href="index-1.html">Home</a>
+      <a href="index.html">Home</a>
 
       <a href="team.html">About Us</a>
       <a href="urc.html">URC</a>
@@ -72,14 +72,13 @@
     <nav class="navbar" id="navb"><a class="navbar-left"><img src="logo.png"></a>
       <div id="links">
         <ul>
-          <li style="width: 8%;"><a href='index-1.html'>Home</a></li>
+          <li style="width: 8%;"><a href='index.html'>Home</a></li>
           <li style="width: 16%;"><a href="team.html">About Us</a></li>
-          <li style="width: 10%;"><a id="urclink">URC &#9660</a>
+          <li style="width: 25%;"><a id="urclink">Our Journey &#9660</a>
             <div class="hoverbox hoverbox_fix"  style="margin-left: -20px;" id="hovertwo" style="background-color: #ccc; width: 80px; z-index:100">
               <a href="urc.html" class="hoverlink">About URC</a>
               <a class="hoverlink" href="urc18.html">URC 2018</a>
-              <a class="hoverlink" href="urc17.html">URC 2017</a>
-              <a href="urc16.html" class="hoverlink">URC 2016</a></div>
+              <a class="hoverlink" href="urc19.html">URC 2019 (ATOM)</a>
           </li>
 
 
@@ -251,10 +250,12 @@ text-align:center;
   <!-- ######################particle Js Script finished ###########################-->
 
 
-<h5>This year University Rover Challenge was organized from 31 May 2018 to  2 June 2018. For this year's competition 96 teams registered. 35 of them were called for the finals at Mars Station, Utah. ARES Robotics went into the competition with great excitement. Our rover performed all four tasks to the best of its capabalitites.</h5>
-<h5>We achieved 7th position all over the world.</h5>
-<h5>Our rover was the best performer from India.</h5>
-<h5>Our biggest highlight was our performance at Extreme Retrival Task.We were third best out performing major international teams.</h5>
+<h5>In 2018, University Rover Challenge was organized from 31 May 2018 to  2 June 2018. In this competition 96 teams registered. 35 of them were called for the finals at Mars Station, Utah. ARES Robotics enthusisastically prepared for this competition.</h5>
+<h5>This was the first time Team ARES appeared in University Rover Championship. This was also the first ever Mars Rover Prototype Built at NSIT.</h5>
+<h5>The biggest highlight of this competition was that Team ARES successfully cleared the Preliminary Design Report phase of the competition, which is a great achievement, considering several top universities including Harvard and Stanford haven't been able to achieve that feet.</h5>
+    <!--<h5>We achieved 7th position all over the world.</h5>-->
+<!--<h5>Our rover was the best performer from India.</h5>-->
+<!--<h5>Our biggest highlight was our performance at Extreme Retrival Task.We were third best out performing major international teams.</h5>-->
 
 
 </div>
@@ -262,11 +263,11 @@ text-align:center;
 <div class='work' style="background-color: #F4F9F2;">
 <div>
 <div class='specs' style="text-align: center;">
-<h3>ROVER AIRAWAT</h3>
+<!--<h3>ROVER AIRAWAT</h3>-->
 
 </div>
 <div class='workphoto' style='text-align: center;' id="rover1">
-<img src="rover18.jpg">
+<img src="urc2018-rover.jpg">
 </div>
 <table cellpadding="0" cellspacing="0">
     <tr>
@@ -542,7 +543,7 @@ text-align:center;
       <div id="upperfooter" style="text-align: left; position: relative;">
           <div id="upperfooter-one">
             <div class="quicklinks">
-              <h5><a href="index-1.html">Home</a></h5>
+              <h5><a href="index.html">Home</a></h5>
               <h5><a href="team.html">About Us</a></h5>
               <h5><a href="urc.html">About URC</a></h5>
               <h5><a>URC 17</a></h5>
