--- a/urc19.html
+++ b/urc19.html
@@ -1,21 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>URC 2017 | ARES Robotics</title>
+  <title>URC 2019 | ARES Robotics</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="See ARES Robotics's record in URC 2017.">
+  <meta name="description" content="See ARES Robotics's record in URC 2019.">
   <link rel="stylesheet" type="text/css" href="home.css">
       <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans:300,400,600,700|Raleway:400,500,600,700,800,900|Bitter" rel="stylesheet">
-        <link rel="shortcut icon" href="favicon2.png">
+        <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body style='background:-webkit-linear-gradient(#456C86,#003559)'>
 
   <div id="menu" class="menu">
       <h3>ARES Robotics</h3>
-      <a href="index-1.html">Home</a>
+      <a href="index.html">Home</a>
 
       <a href="team.html">About Us</a>
       <a href="urc.html">URC</a>
@@ -72,14 +72,14 @@
     <nav class="navbar" id="navb"><a class="navbar-left"><img src="logo.png"></a>
       <div id="links">
         <ul>
-          <li style="width: 8%;"><a href='index-1.html'>Home</a></li>
+          <li style="width: 8%;"><a href='index.html'>Home</a></li>
           <li style="width: 16%;"><a href="team.html">About Us</a></li>
           <li style="width: 10%;"><a id="urclink">URC &#9660</a>
             <div class="hoverbox" style="margin-left: -20px;" id="hovertwo" style="background-color: #ccc; width: 80px;">
               <a href="urc.html" class="hoverlink">About URC</a>
-              <a href="urc18.html" class="hoverlink">URC 2018</a> </div>
-              <a class="hoverlink">URC 2017</a>
-              <a href="urc16.html" class="hoverlink">URC 2016</a></div>
+              <a href="urc18.html" class="hoverlink">URC 2018</a>
+              <a class="hoverlink">URC 2019 (ATOM)</a>
+            </div>
           </li>
 
 
@@ -103,7 +103,7 @@
 
 
 <div id='urc2017' class='urc-performance'>
-<h1 style="color: #fff;">URC 2017</h1>
+<h1 style="color: #fff;">URC 2019</h1>
 
 <h5>This year University Rover Challenge was organized from 1 June 2017 to 3June 2017. For this year's competition 82 teams registered. 36 of them were called for the finals at Mars Station, Utah. ARES Robotics went into the competition with great excitement. Our rover performed all four tasks to the best of its capabalitites.</h5>
 <h5>We achieved 8th position all over the world.</h5>
@@ -120,7 +120,7 @@
 
 </div>
 <div class='workphoto' style='text-align: center;' id="rover1">
-<img src="rover17.jpeg">
+<img src="rover-2019.jpg">
 </div>
 <table cellpadding="0" cellspacing="0">
     <tr>
