--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="description" content="Personal Portfolio Template">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons-->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.webp">
-  <link rel="icon" type="image/webp" sizes="32x32" href="img/favicons/favicon-32x32.webp">
-  <link rel="icon" type="image/webp" sizes="16x16" href="img/favicons/favicon-16x16.webp">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
   <!-- Web fonts-->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
   <!-- CSS vendors-->
