--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   <div class="single-review swiper-slide">
                     <div class="review-header d-flex justify-content-between">
                       <div class="review-client">
-                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/team/shashu.jpeg" alt="Client">
+                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/team/shashu.webp" alt="Client">
                           <div class="client-details">
                             <h6 class="client-name">Shashank Vishwanath Adhikarla</h6><span class="client-role">Science-Lead-2019</span>
                           </div>
@@ -682,8 +682,8 @@
                       </div>
                     </div>
                   </a></div>
-                  <div class="single-item col-6 col-lg-4 brand design"><a class="portfolio-item" href="img/team/Devansh Jain.jpeg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Devansh Jain.jpeg">
+                  <div class="single-item col-6 col-lg-4 brand design"><a class="portfolio-item" href="img/team/Devansh Jain.webp" data-lightbox>
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Devansh Jain.webp">
                       <div class="item-content">
                         <h6 class="content-title">Devansh Jain &emsp; President 2018-19</h6><span class="content-more">Hi, I'm Devansh Jain Nawal  from COE of graduating year 2020. I have been member of Ares from 2017 and worked with team to make Rover 2018. It's my pleasure that I working in Software department of Ares. I worked as Team Lead in Ares team and will love to work with my team till my graduating year.
                           <ul class="list-unstyled social-icons">
@@ -843,8 +843,8 @@
                     </div>
                   </a></div>
                                   <!-- Single item-->
-                <div class="single-item col-6 col-lg-4 design photos"><a class="portfolio-item" href="img/team/Sanuj.jpeg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Sanuj.jpeg">
+                <div class="single-item col-6 col-lg-4 design photos"><a class="portfolio-item" href="img/team/Sanuj.webp" data-lightbox>
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Sanuj.webp">
                       <div class="item-content">
                         <h6 class="content-title">Sanuj Kulshreshtha &emsp; President 2019-20</h6><span class="content-more">Hi, I'm Sanuj Kulshrestha from ECE of graduating year 2021. I have been member of Ares from 2018 and worked with team to make Atom II. It's my pleasure that I working in Electronics department of Ares. I worked as Team Leader in Ares team and will love to work with my team till my graduating year.
                           <ul class="list-unstyled social-icons">
@@ -910,8 +910,8 @@
                     </div>
                   </a></div>
                                   <!-- Single item-->
-                <div class="single-item col-6 col-lg-4 design photos"><a class="portfolio-item" href="img/team/shashu.jpeg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/shashu.jpeg">
+                <div class="single-item col-6 col-lg-4 design photos"><a class="portfolio-item" href="img/team/shashu.webp" data-lightbox>
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/shashu.webp">
                       <div class="item-content">
                         <h6 class="content-title">Shashank Vishwanath Adhikarla</h6><span class="content-more">Hi, I'm Shashank Vishwanath Adhikarla from BT of graduating year 2020. I have been member of Ares from 2018 and worked with team to make Atom II. It's my pleasure that I working in Science department of Ares. I worked as Science Lead in Ares team and will love to work with my team till my graduating year.
                           <ul class="list-unstyled social-icons">
@@ -1039,8 +1039,8 @@
                       </div>
                     </div>
                   </a></div>
-                  <div class="single-item col-6 col-lg-4 brand design"><a class="portfolio-item" href="img/team/Kunal Goel.jpeg" data-lightbox>
-                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Kunal Goel.jpeg">
+                  <div class="single-item col-6 col-lg-4 brand design"><a class="portfolio-item" href="img/team/Kunal Goel.webp" data-lightbox>
+                    <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/team/Kunal Goel.webp">
                       <div class="item-content">
                         <h6 class="content-title">Kunal Goel &emsp; Electronics Lead - 2018-19</h6><span class="content-more">Hi, I'm Kunal Goel  from ECE of graduating year 2020. I have been member of Ares from 2018 and worked with team to make Rover 2018. It's my pleasure that I working in Software department of Ares. I worked as Team Lead in Ares team and will love to work with my team till my graduating year.
                           <ul class="list-unstyled social-icons">
