--- a/Atom-II/atom-II.html
+++ b/Atom-II/atom-II.html
@@ -14,24 +14,24 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
         <title>Atom 2.0</title>
         
-        <link rel="apple-touch-icon" sizes="57x57" href="/resources/favicons/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/resources/favicons/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/resources/favicons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/resources/favicons/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/resources/favicons/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/resources/favicons/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/resources/favicons/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/resources/favicons/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="/resources/favicons/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/resources/favicons/favicon-194x194.png" sizes="194x194">
-        <link rel="icon" type="image/png" href="/resources/favicons/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/resources/favicons/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="/resources/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="apple-touch-icon" sizes="57x57" href="/resources/favicons/apple-touch-icon-57x57.webp">
+        <link rel="apple-touch-icon" sizes="60x60" href="/resources/favicons/apple-touch-icon-60x60.webp">
+        <link rel="apple-touch-icon" sizes="72x72" href="/resources/favicons/apple-touch-icon-72x72.webp">
+        <link rel="apple-touch-icon" sizes="76x76" href="/resources/favicons/apple-touch-icon-76x76.webp">
+        <link rel="apple-touch-icon" sizes="114x114" href="/resources/favicons/apple-touch-icon-114x114.webp">
+        <link rel="apple-touch-icon" sizes="120x120" href="/resources/favicons/apple-touch-icon-120x120.webp">
+        <link rel="apple-touch-icon" sizes="144x144" href="/resources/favicons/apple-touch-icon-144x144.webp">
+        <link rel="apple-touch-icon" sizes="152x152" href="/resources/favicons/apple-touch-icon-152x152.webp">
+        <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon-180x180.webp">
+        <link rel="icon" type="image/webp" href="/resources/favicons/favicon-32x32.webp" sizes="32x32">
+        <link rel="icon" type="image/webp" href="/resources/favicons/favicon-194x194.webp" sizes="194x194">
+        <link rel="icon" type="image/webp" href="/resources/favicons/favicon-96x96.webp" sizes="96x96">
+        <link rel="icon" type="image/webp" href="/resources/favicons/android-chrome-192x192.webp" sizes="192x192">
+        <link rel="icon" type="image/webp" href="/resources/favicons/favicon-16x16.webp" sizes="16x16">
         <link rel="manifest" href="/resources/favicons/manifest.json">
         <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="/resources/favicons/mstile-144x144.png">
+        <meta name="msapplication-TileImage" content="/resources/favicons/mstile-144x144.webp">
         <meta name="msapplication-config" content="/resources/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
     </head>
@@ -63,8 +63,8 @@
         <header>
             <nav>
                 <div class="row">
-                    <img src="resources/img/Picture2.png" alt="Omnifood logo" class="logo">
-                    <img src="resources/img/Picture2.png" alt="Omnifood logo" class="logo-black">
+                    <img src="resources/img/Picture2.webp" alt="Omnifood logo" class="logo">
+                    <img src="resources/img/Picture2.webp" alt="Omnifood logo" class="logo-black">
                     <ul class="main-nav js--main-nav">
                         <li><a href="#features">ABOUT Atom 2.0</a></li>
                         <li><a href="#works">How it works</a></li>
@@ -114,44 +114,44 @@
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                        <img src="resources/img/1.webp" alt="Korean bibimbap with egg and vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                        <img src="resources/img/2.webp" alt="Simple italian pizza with cherry tomatoes">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+                        <img src="resources/img/3.webp" alt="Chicken breast steak with vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+                        <img src="resources/img/4.webp" alt="Autumn pumpkin soup">
                     </figure>
                 </li>
             </ul>
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+                        <img src="resources/img/5.webp" alt="Paleo beef steak with vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                        <img src="resources/img/6.webp" alt="Healthy baguette with egg and vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+                        <img src="resources/img/7.webp" alt="Burger with cheddar and bacon">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+                        <img src="resources/img/8.webp" alt="Granola with cherries and strawberries">
                     </figure>
                 </li>
             </ul>
@@ -236,7 +236,7 @@
                 <h2>The Team Behind Atom 2.0</h2>
             </div>
             <div class="row">
-                <center><img src="resources/img/4.jpg" style="height: 75%; width: 90%; border-radius: 10%;"alt="Autumn pumpkin soup"></center>
+                <center><img src="resources/img/4.webp" style="height: 75%; width: 90%; border-radius: 10%;"alt="Autumn pumpkin soup"></center>
             </div>
         </section>
         
