Fixed Home Page

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     </div>
   </nav>
   <!-- Home-->
-  <section class="home-area element-cover-bg video-variant" id="home" style="background-image:url(img/back-mars.webp)">
+  <section class="home-area element-cover-bg video-variant" id="home" style="background-image:url(img/back-mars.jpg)">
     <!-- <div class="player" id="homeVideo" data-property="{videoURL:'https://www.youtube.com/watch?v=rpjQ9aL8PLs&t=34s',containment:'#home',autoPlay:true, mute:true, showControls:false, stopMovieOnBlur:false, showYTLogo: false}"></div> -->
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
-          <h1 class="home-name"><img src="img/ARES_LOGO.webp" style="height: 400px; width: 400px;"></h1><!--<span>Robotics</span></h1>-->
+          <h1 class="home-name"><img src="img/ARES_LOGO_GREY.png" style="height: 130px; width: 130px;"><img src="img/ARES_NAME.png" style="height: 92px; width: 503px; margin-bottom: 50px; margin-left: 20px;"></h1><!--<span>Robotics</span></h1>-->
           <h4 class="cd-headline clip home-headline">We are <span class="cd-words-wrapper single-headline"><b class="is-visible"> Developers.</b><b> Engineers.</b><b> Achievers.</b><b> ARES Robotics.</b></span></h4>
         </div>
       </div>
