added new protocase logo and mobile numbers on the page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
-          <h1 class="home-name"><img src="img/ARES_LOGO_GREY.png" style="height: 130px; width: 130px;"><img src="img/ARES_NAME.png" style="height: 92px; width: 503px; margin-bottom: 50px; margin-left: 20px;"></h1><!--<span>Robotics</span></h1>-->
+          <h1 class="home-name"><img src="img/ARES_LOGO_GREY.png" style="height: 130px; width: 130px;"><img class="name_logo" src="img/ARES_NAME.png" style="height: 92px; width: 503px; margin-bottom: 50px; margin-left: 20px;"></h1><!--<span>Robotics</span></h1>-->
           <h4 class="cd-headline clip home-headline">We are <span class="cd-words-wrapper single-headline"><b class="is-visible"> Developers.</b><b> Engineers.</b><b> Achievers.</b><b> ARES Robotics.</b></span></h4>
         </div>
       </div>
@@ -1161,13 +1161,13 @@
                   </div>
                   <br>
                   <h3 class = "section-title"> Sponsor Us</h3>
-                  <div class="animated-bar"></div>
+                  <div class="animated-bar"></div><br>
                     <p class="info-description" style="color: white;">While we are extremely passionate about robotics, however as students our progress is severely hindered by a lack of funds. Building a rover from scratch is a tough and equally expensive task. With a large team of various disciplines teaming up to address several challenges, we require to build the rover's body, sophisticated communication systems, a rather precise robotic arm, stereo vision system and much more. The cost for such a project is insanely huge to be funded by a group of students like us. While we try and make the best of whatever resources we can aquire, we almost definitely cannot be successful without outside aid. </p>
                     <p class="info-description" style="color: white;">We are looking for Sponsors and Donors alike. If you are interested in supporting a young enthusiastic team working hard to bring home a passion for robotics, please do reach out to us. You can also support us through our online fundraising campaign on Ketto.</p><br>
-                    <a class="btn content-download button-main button-scheme" href="docs/Brochure.pdf" role="button">Download our Brochure</a><br><br>
-                    <img src="img/ketto.webp" style="height: 100px; width: 300px;"><br>
+                    <a class="btn content-download button-main button-scheme" href="docs/Brochure.pdf" role="button">Download our Brochure</a><br><br><br><br>
+                    <!-- <img src="img/ketto.webp" style="height: 100px; width: 300px;"><br>
                     <a href="https://www.ketto.org/fundraiser/aresroboticsnsut?utm_source=internal&utm_medium=whatsappShare&utm_campaign=aresroboticsnsut&utm_content=652f3f041248406acca1ae1a9658ca38&shby=1" style="font-size: 50px;">Click Here to Sponsor Us on Ketto!</a>
-                    <br><br><br>
+                    <br><br><br> -->
                     <h3 class = "section-title">Our Sponsors</h3>
                     <div class="animated-bar"></div><br>
 
@@ -1182,7 +1182,7 @@
                     </figure>
                     
                     <figure class="snip0026 fig2" >
-                      <img src="./images/cornitos.png" alt="sample48"/>
+                      <img style="width:80%"src="./images/cornitos.png" alt="sample48"/>
                       <figcaption>
                         <div class="name"><h2><span>CORNITOS</span></h2></div>
                         <div class="link"><b><p><a style="color:black; text-align: center" href="http://www.cornitos.in/">Have a look! </a></p></b></div>
@@ -1200,7 +1200,7 @@
                     </figure> 
                     
                     <figure class="snip0026 fig4" >
-                      <img class="image" src="https://images.squarespace-cdn.com/content/v1/593d0771bebafb0e2326d3a9/1497328936539-A7LP38MQB82UPRMEBRGX/Protocase.png" alt="sample49"/>
+                      <img style="width: 90%;" class="image" src="./images/protocase.png" alt="sample49"/>
                       <figcaption>
                         <div class="name"><h2><span>PROTOCASE</span></h2></div>
                         <div class="link"><b><p><a style="color:black; text-align: center" href="https://www.protocase.com/">Have a look!</a></p></b></div>
@@ -1281,7 +1281,7 @@
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-call"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Call Us</h6><span class="info-value"><a href="tel:+441632967704">Devansh Batra - +91 89304 85111<br> Nishant Chahar - +91 8130624192</a></span>
+                            <h6 class="info-type">Call Us</h6><span class="info-value"><a href="tel:+441632967704">Arjun Singh - +91 9013121103<br> Vineet Agarwal - +91 964328492</a></span>
                           </div>
                         </div>
                       </li>
