Fixed alignment of sponsor cards and Ares name for mobile screen

--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
                     <h3 class = "section-title">Our Sponsors</h3>
                     <div class="animated-bar"></div><br>
 
-                    <center class="grid">
+                    <centre class="grid">
                       <figure class="snip0026 fig1" >
                       <img class="image" src="./images/srt.png" alt="sample48"/>
                       <figcaption>
@@ -1237,7 +1237,7 @@
                       </figcaption>			
                     </figure> 
                      <br><br>
-                    </center>
+                    </centre>
                 </div>
               </div>
             </div>
