--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2 class="content-subtitle">Who are we?</h2>
                     <h6 class="content-title">We Are A.R.E.S. Robotics.</h6>
                     <div class="content-description">
-                      <p>Team ARES Robotics is a group of young engineering undergraduates from Netaji Subhash University of Technology that represents India in various International Competition like URC (University Rover Challenge) and ERC (European Rover Challenge). <br>
+                      <p>Team ARES Robotics is a group of young engineering undergraduates from Netaji Subhas University of Technology that represents India in various International Competition like URC (University Rover Challenge) and ERC (European Rover Challenge). <br>
                       Our team consists of students, highly interested in the field of Robotics and Artificial Intelligence and having an aim of designing and fabricating a fully functional Rover that can be used in the early exploration of the Mars. <br>
                       Our projects required students having various skills and interests, that makes our team divide into 5 major sub teams (Software, Electronics, Mechanical, Science and Business). <br>
                       Recently we qualified for the European Rover Challenge and were among the top 50 teams all over the world.
@@ -395,7 +395,7 @@
                     <h3 class="col-title">Timeline</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">The Dawn</h5><span class="item-details">Netaji Subhas Institute of Technology / October - 2017</span>
-                      <p class="item-description"> - A.R.E.S. - Autonomous Rover using Embedded Systems Robotics was formed at Netaji Subhas Institute of Technolgy (now, Netaji Subhash University of Technology).</p>
+                      <p class="item-description"> - A.R.E.S. - Autonomous Rover using Embedded Systems Robotics was formed at Netaji Subhas Institute of Technolgy (now, Netaji Subhas University of Technology).</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">Indian Rover Challenge (IRC) - 2018</h5><span class="item-details">Vellore Institue of Technology, Vellore / January - 2018</span>
