--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-call"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Call Us</h6><span class="info-value"><a href="tel:+441632967704">Arjun Singh - +91 9013121103<br> Vineet Agarwal - +91 964328492</a></span>
+                            <h6 class="info-type">Call Us</h6><span class="info-value"><a href="tel:+441632967704">Arjun Singh - +91 9013121103<br> Satvik Sharma - +91 9205008573</a></span>
                           </div>
                         </div>
                       </li>
