--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
                       </div>
                     </address>
-                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="docs/Brochure.pdf" role="button">Download our Brochure</a>
+                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="docs/Brochure_2022.pdf" role="button">Download our Brochure</a>
                       <ul class="list-unstyled list-inline content-follow">
                         <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.instagram.com/aresrobotics.nsut/"><i class="icon ion-logo-instagram"></i></a></li>
