--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,14 @@
                   <div class="animated-bar"></div><br>
                     <p class="info-description" style="color: white;">While we are extremely passionate about robotics, however as students our progress is severely hindered by a lack of funds. Building a rover from scratch is a tough and equally expensive task. With a large team of various disciplines teaming up to address several challenges, we require to build the rover's body, sophisticated communication systems, a rather precise robotic arm, stereo vision system and much more. The cost for such a project is insanely huge to be funded by a group of students like us. While we try and make the best of whatever resources we can aquire, we almost definitely cannot be successful without outside aid. </p>
                     <p class="info-description" style="color: white;">We are looking for Sponsors and Donors alike. If you are interested in supporting a young enthusiastic team working hard to bring home a passion for robotics, please do reach out to us. You can also support us through our online fundraising campaign on Ketto.</p><br>
-                    <a class="btn content-download button-main button-scheme" href="docs/Brochure.pdf" role="button">Download our Brochure</a><br><br><br><br>
+                    
+                    <div>
+                      <iframe src="./docs/Brochure_2022.pdf" style="width:600px; height:500px;" frameborder="0"></iframe>
+                    </div>
+                    <br>
+                    
+
+                    <a class="btn content-download button-main button-scheme" href="docs/Brochure_2022.pdf" role="button">Download our Brochure</a><br><br><br><br>
 
                     <!-- <a href="https://online.flippingbook.com/view/415592844/" class="fbo-embed" data-fbo-id="415592844" data-fbo-lightbox="yes" data-fbo-width="740px" data-fbo-height="480px" data-fbo-version="1" style="max-width: 100%">Ares Robotics Brochure</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=415592844"></script><br><br><br> -->
                     <!-- <img src="img/ketto.webp" style="height: 100px; width: 300px;"><br>
