Embeddings now resizeable

--- a/index.html
+++ b/index.html
@@ -1166,9 +1166,8 @@
                     <p class="info-description" style="color: white;">We are looking for Sponsors and Donors alike. If you are interested in supporting a young enthusiastic team working hard to bring home a passion for robotics, please do reach out to us. You can also support us through our online fundraising campaign on Ketto.</p><br>
                     
                     <div>
-                      <iframe src="./docs/Brochure_2022.pdf" style="width:600px; height:500px;" frameborder="0"></iframe>
+                      <iframe src="./docs/Brochure_2022.pdf" style="width:100%; height:500px;" frameborder="0"></iframe>
                     </div>
-                    <br>
                     
 
                     <a class="btn content-download button-main button-scheme" href="docs/Brochure_2022.pdf" role="button">Download our Brochure</a><br><br><br><br>
