Updated Website Team Page

--- a/index.html
+++ b/index.html
@@ -491,6 +491,19 @@
             </div>
             <!-- Portfolio section-->
             <div class="portfolio-section single-section">
+              <div class="row">
+                <!-- Filter nav-->
+                <div class="col-12">
+                  <ul class="list-inline filter-control" role="group" aria-label="Filter Control">
+                    <li class="list-inline-item tab-active" data-filter="*">All Team Members</li>
+                    <li class="list-inline-item" data-filter=".alpha">2021</li>
+                    <li class="list-inline-item" data-filter=".beta">2020</li>
+                    <li class="list-inline-item" data-filter=".gamma">2019</li>
+                    <li class="list-inline-item" data-filter=".delta">2018</li>
+                    
+                  </ul>
+                </div>
+              </div>
               <div id="portfolioList" class="portfolio-grid row"></div>
             </div>
           </div>
