--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
             <div class="row">
               <div class="col-12">
                 <div class="section-heading page-heading">
-                  <h2 class="section-title">Our Instagram Feed</h2>
+                  <h2 class="section-title">Our Instagram Feed...</h2>
                   <div class="animated-bar"></div>
                 </div>
               </div>
             </div>
 
-            <div style="margin-left: 20%;">
+            <div style="justify-content: center; margin-left: 23%;">
               <section id="waterfall">
   
               </section>
