--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#resume">Journey</a></li>
         <li class="nav-item"><a class="nav-link" href="#portfolio">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="http://blog.aresroboticsnsut.com/" target="_blank">Blog</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="http://blog.aresroboticsnsut.com/" target="_blank">Blog</a></li> -->
         <li class="nav-item"><a class="nav-link" href="#contact">Our Sponsors</a></li>
         <!-- <li class="nav-item"><a class="nav-link" href="#sponsi">Our Sponsors</a></li> -->
 
