--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   <div class="single-review swiper-slide">
                     <div class="review-header d-flex justify-content-between">
                       <div class="review-client">
-                        <div class="media"><img class="img-fluid rounded-circle client-avatar" data-src="img/team/Abhinav Gupta.webp" alt="Client">
+                        <div class="media"><img class="img-fluid rounded-circle client-avatar" src="img/team/Abhinav Gupta.webp" alt="Client">
                           <div class="client-details">
                             <h6 class="client-name">Abhinav Gupta</h6><span class="client-role">Electronics-Lead-2019</span>
                           </div>
